--- a/MoneyM/Storyboards/Settings.storyboard
+++ b/MoneyM/Storyboards/Settings.storyboard
@@ -287,6 +287,110 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="Feedback" id="Od3-2S-wX0">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="cHL-eg-qVT" customClass="SettingsTableViewCell" customModule="MoneyM" customModuleProvider="target">
+                                        <rect key="frame" x="116" y="270.5" width="288" height="51.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cHL-eg-qVT" id="Fn4-7H-Zuo">
+                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rk8-5Y-Pme">
+                                                    <rect key="frame" x="16" y="13" width="26" height="26"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github-mark" translatesAutoresizingMaskIntoConstraints="NO" id="H2D-St-e0R">
+                                                            <rect key="frame" x="2" y="2" width="22" height="22"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="H2D-St-e0R" firstAttribute="leading" secondItem="rk8-5Y-Pme" secondAttribute="leading" constant="2" id="0x3-t8-5Ok"/>
+                                                        <constraint firstAttribute="height" constant="26" id="FYc-zd-cg5"/>
+                                                        <constraint firstItem="H2D-St-e0R" firstAttribute="top" secondItem="rk8-5Y-Pme" secondAttribute="top" constant="2" id="PfO-vq-sbV"/>
+                                                        <constraint firstAttribute="bottom" secondItem="H2D-St-e0R" secondAttribute="bottom" constant="2" id="bER-6e-97U"/>
+                                                        <constraint firstAttribute="trailing" secondItem="H2D-St-e0R" secondAttribute="trailing" constant="2" id="dVb-gd-Mxq"/>
+                                                        <constraint firstAttribute="width" constant="26" id="rOh-wx-gLk"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQp-8G-pZT">
+                                                    <rect key="frame" x="58" y="15.5" width="96" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GQp-8G-pZT" firstAttribute="centerY" secondItem="Fn4-7H-Zuo" secondAttribute="centerY" id="Fd8-8x-MlH"/>
+                                                <constraint firstItem="rk8-5Y-Pme" firstAttribute="centerY" secondItem="Fn4-7H-Zuo" secondAttribute="centerY" id="Fe9-GX-z3A"/>
+                                                <constraint firstItem="rk8-5Y-Pme" firstAttribute="leading" secondItem="Fn4-7H-Zuo" secondAttribute="leading" constant="16" id="Gur-9R-o0q"/>
+                                                <constraint firstItem="GQp-8G-pZT" firstAttribute="leading" secondItem="rk8-5Y-Pme" secondAttribute="trailing" constant="16" id="yT0-eE-soJ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconBackgroundView" destination="rk8-5Y-Pme" id="OH9-fz-B8W"/>
+                                            <outlet property="iconImageView" destination="H2D-St-e0R" id="uVa-GW-Qsl"/>
+                                            <outlet property="imageView" destination="H2D-St-e0R" id="tKi-9u-Xcy"/>
+                                            <outlet property="titleLabel" destination="GQp-8G-pZT" id="yJL-qn-iSM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="0JS-RV-SUP" customClass="SettingsTableViewCell" customModule="MoneyM" customModuleProvider="target">
+                                        <rect key="frame" x="116" y="322" width="288" height="51.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0JS-RV-SUP" id="qkc-a1-Hv5">
+                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="94H-VA-4Ec">
+                                                    <rect key="frame" x="16" y="13" width="26" height="26"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Telegram-Logo" translatesAutoresizingMaskIntoConstraints="NO" id="GUc-cS-oei">
+                                                            <rect key="frame" x="2" y="2" width="22" height="22"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="GUc-cS-oei" secondAttribute="bottom" constant="2" id="0gp-m3-GNA"/>
+                                                        <constraint firstAttribute="height" constant="26" id="Hwg-ed-Vqk"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GUc-cS-oei" secondAttribute="trailing" constant="2" id="MrA-ru-TXw"/>
+                                                        <constraint firstItem="GUc-cS-oei" firstAttribute="leading" secondItem="94H-VA-4Ec" secondAttribute="leading" constant="2" id="Nqk-kb-jUX"/>
+                                                        <constraint firstAttribute="width" constant="26" id="Y2M-U0-qC1"/>
+                                                        <constraint firstItem="GUc-cS-oei" firstAttribute="top" secondItem="94H-VA-4Ec" secondAttribute="top" constant="2" id="bIA-nP-F7x"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Telegram" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OI8-7s-eIJ">
+                                                    <rect key="frame" x="58" y="15.5" width="70.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OI8-7s-eIJ" firstAttribute="centerY" secondItem="qkc-a1-Hv5" secondAttribute="centerY" id="DiV-Ou-Qzd"/>
+                                                <constraint firstItem="94H-VA-4Ec" firstAttribute="leading" secondItem="qkc-a1-Hv5" secondAttribute="leading" constant="16" id="dS0-dM-bAg"/>
+                                                <constraint firstItem="94H-VA-4Ec" firstAttribute="centerY" secondItem="qkc-a1-Hv5" secondAttribute="centerY" id="pL8-un-Lwc"/>
+                                                <constraint firstItem="OI8-7s-eIJ" firstAttribute="leading" secondItem="94H-VA-4Ec" secondAttribute="trailing" constant="16" id="wq1-K5-HIf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconBackgroundView" destination="94H-VA-4Ec" id="Oei-7C-AeT"/>
+                                            <outlet property="iconImageView" destination="GUc-cS-oei" id="Ldk-vg-i8B"/>
+                                            <outlet property="imageView" destination="GUc-cS-oei" id="yaG-kq-uhY"/>
+                                            <outlet property="titleLabel" destination="OI8-7s-eIJ" id="fqw-JA-2UM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="P3b-JS-E5a" id="UVM-o7-4s1"/>
@@ -352,19 +456,21 @@
         <segue reference="7Iy-oh-9Gl"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="Telegram-Logo" width="1000" height="1000"/>
         <image name="dollarsign.circle" catalog="system" width="128" height="123"/>
+        <image name="github-mark" width="240" height="240"/>
         <image name="paintbrush" catalog="system" width="122" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
-            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
