--- a/MoneyM/Storyboards/Base.lproj/Main.storyboard
+++ b/MoneyM/Storyboards/Base.lproj/Main.storyboard
@@ -607,7 +607,7 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <integer key="value" value="12"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="add.title"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="new_transaction.title"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="addTransactionButtonClicked:" destination="awt-qX-fG1" eventType="touchUpInside" id="8kF-bX-BOH"/>
@@ -1170,62 +1170,19 @@
             </objects>
             <point key="canvasLocation" x="20.610687022900763" y="3.5211267605633805"/>
         </scene>
-        <!--Test-->
+        <!--Add transaction-->
         <scene sceneID="WcO-TN-5i7">
             <objects>
                 <viewController storyboardIdentifier="TransactionViewer" id="7lB-qr-5aA" customClass="TransactionViewerViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="haO-ji-4XA">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuX-Qw-cOw">
-                                <rect key="frame" x="0.0" y="0.0" width="430" height="44"/>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="3VV-yH-sCB"/>
-                                </constraints>
-                                <color key="barTintColor" systemColor="systemGray6Color"/>
-                                <items>
-                                    <navigationItem title="Add transaction" id="YAW-hF-hlf">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" id="DHG-eK-0t1">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="3yn-kS-Qdz">
-                                                <rect key="frame" x="20" y="10.666666666666664" width="95" height="35"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="cancel.title"/>
-                                                </userDefinedRuntimeAttributes>
-                                                <connections>
-                                                    <action selector="cancelButtonClicked:" destination="7lB-qr-5aA" eventType="touchUpInside" id="Z0j-xz-dm2"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" style="plain" id="6oT-Y4-evw">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="WYC-EY-HCs">
-                                                <rect key="frame" x="325" y="10.666666666666664" width="85" height="35"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Confirm"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="confirm.title"/>
-                                                </userDefinedRuntimeAttributes>
-                                                <connections>
-                                                    <action selector="confirmButtonClicked:" destination="7lB-qr-5aA" eventType="touchUpInside" id="aXF-Cc-wvu"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="add_transaction.title"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KIh-Gt-TVL">
-                                <rect key="frame" x="0.0" y="44" width="430" height="878"/>
+                                <rect key="frame" x="0.0" y="119" width="430" height="779"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udn-Kb-qzX">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="1078"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="979"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Af7-gr-KJ1" userLabel="Genereal ">
                                                 <rect key="frame" x="16" y="16" width="398" height="232"/>
@@ -1308,7 +1265,7 @@
                                                         </constraints>
                                                     </datePicker>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PbS-HL-EbE">
-                                                        <rect key="frame" x="16" y="88" width="366" height="56"/>
+                                                        <rect key="frame" x="16" y="87.999999999999943" width="366" height="56"/>
                                                         <color key="backgroundColor" systemColor="quaternarySystemFillColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="56" id="V06-IX-ubN"/>
@@ -1351,25 +1308,65 @@
                                     <constraint firstItem="udn-Kb-qzX" firstAttribute="width" secondItem="KIh-Gt-TVL" secondAttribute="width" id="vaB-0H-niw"/>
                                 </constraints>
                             </scrollView>
+                            <navigationBar clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9dQ-mA-02n">
+                                <rect key="frame" x="0.0" y="59" width="430" height="44"/>
+                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ebc-oM-gEo"/>
+                                </constraints>
+                                <color key="barTintColor" systemColor="systemGroupedBackgroundColor"/>
+                                <items>
+                                    <navigationItem title="Title" id="9DF-eR-Y54">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="GWf-zx-x6R">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="KYc-Zt-d4V">
+                                                <rect key="frame" x="20" y="5" width="95" height="34.333333333333336"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="cancel.title"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="cancelButtonClicked:" destination="7lB-qr-5aA" eventType="touchUpInside" id="AdD-iy-Oy9"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="gEF-Q5-nXZ">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="cam-h0-bdH">
+                                                <rect key="frame" x="315" y="5" width="95" height="34.333333333333336"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Confirm"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="confirm.title"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="confirmButtonClicked:" destination="7lB-qr-5aA" eventType="touchUpInside" id="5Zm-fq-mYM"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Jk-xj-lYV"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="KIh-Gt-TVL" firstAttribute="top" secondItem="KuX-Qw-cOw" secondAttribute="bottom" id="0Bp-8D-uqR"/>
                             <constraint firstItem="KIh-Gt-TVL" firstAttribute="bottom" secondItem="6Jk-xj-lYV" secondAttribute="bottom" id="B64-ic-ozn"/>
-                            <constraint firstItem="KuX-Qw-cOw" firstAttribute="trailing" secondItem="6Jk-xj-lYV" secondAttribute="trailing" id="Cas-1i-YaP"/>
-                            <constraint firstItem="KuX-Qw-cOw" firstAttribute="top" secondItem="haO-ji-4XA" secondAttribute="top" id="Kzg-Xr-XO3"/>
-                            <constraint firstItem="KuX-Qw-cOw" firstAttribute="leading" secondItem="6Jk-xj-lYV" secondAttribute="leading" id="LVq-ND-vFp"/>
+                            <constraint firstItem="9dQ-mA-02n" firstAttribute="top" secondItem="6Jk-xj-lYV" secondAttribute="top" id="Ha1-Z0-hqo"/>
+                            <constraint firstItem="9dQ-mA-02n" firstAttribute="leading" secondItem="6Jk-xj-lYV" secondAttribute="leading" id="M8M-UI-QaR"/>
                             <constraint firstItem="KIh-Gt-TVL" firstAttribute="leading" secondItem="6Jk-xj-lYV" secondAttribute="leading" id="NF5-wj-qel"/>
+                            <constraint firstItem="KIh-Gt-TVL" firstAttribute="top" secondItem="9dQ-mA-02n" secondAttribute="bottom" constant="16" id="YDT-vM-ubh"/>
                             <constraint firstItem="KIh-Gt-TVL" firstAttribute="trailing" secondItem="6Jk-xj-lYV" secondAttribute="trailing" id="jdJ-CT-7X1"/>
+                            <constraint firstItem="9dQ-mA-02n" firstAttribute="trailing" secondItem="6Jk-xj-lYV" secondAttribute="trailing" id="lWa-Qb-7a2"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Test" id="aRU-dh-uML"/>
-                    <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <navigationItem key="navigationItem" title="Add transaction" id="aRU-dh-uML"/>
                     <connections>
                         <outlet property="amountTextField" destination="Ped-Xp-zKc" id="80F-7o-cSi"/>
                         <outlet property="choiceButton" destination="aVX-Tg-ut7" id="FUQ-Nt-Id4"/>
-                        <outlet property="confirmButton" destination="WYC-EY-HCs" id="bba-g1-f5B"/>
+                        <outlet property="confirmButton" destination="cam-h0-bdH" id="PP8-kE-BAJ"/>
+                        <outlet property="customNavigationBar" destination="9dQ-mA-02n" id="9LY-lq-k1f"/>
                         <outlet property="datePickerView" destination="8jY-Bw-3nd" id="Hu0-11-7vv"/>
                         <outlet property="noteTextField" destination="PbS-HL-EbE" id="oWD-1i-Mhy"/>
                         <outlet property="selectCategoryButton" destination="GE7-fy-fP3" id="afE-m5-SZu"/>
@@ -1377,7 +1374,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="atr-q7-vq5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1850" y="3"/>
+            <point key="canvasLocation" x="2715" y="838"/>
         </scene>
         <!--Transactions-->
         <scene sceneID="typ-ea-Y5d">
